# pngmanip

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: randomise_plte_chunk.rs  recover_dimensions_from_ihdr_crc.rs  remove_plte_chunk.rs
src/: chunk.rs  ihdr_data.rs  image.rs  lib.rs
tests/: pngsuite_tests.rs
